--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ var type = url.split('#');
 var hash = type;
 if(type.length > 1)
   hash = type[1];
-window.location.replace("http://jphstyle.com/"+hash);
+window.location.replace("http://r.adwano.com/"+hash);
 
 </script>
 </body>
